<resources>
    <string name="app_name">Illusion</string>
    <string name="title_studio">Studio</string>
    <string name="title_share">Banquet</string>
    <string name="title_self">Myself</string>
    <string name="action_about">About us</string>
    <string name="des_avatar">avatar</string>
    <string name="prompt_login">登录</string>
    <string name="text_bio">点击按钮以登录</string>
    <string name="text_username">请登录</string>
    <string name="prompt_settings">设置</string>
    <string name="prompt_clear_all">清除全部数据</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_work">新建</string>
    <string name="des_work">studio_work</string>
    <string name="text_about_us">关于我们</string>
    <string name="text_dev_group">项目开发组</string>
    <string name="text_info">分组信息</string>
    <string name="text_github">GitHub项目地址</string>
    <string name="image_view">image_view</string>
    <string name="prompt_stu_share">分享</string>
    <string name="prompt_stu_edit">编辑</string>
    <string name="prompt_stu_del">删除</string>

    <string-array name="choose_action">
        <item>Camera</item>
        <item>File</item>
    </string-array>
</resources>